Fixes kestrel hostname issue

--- a/home/.ssh/config
+++ b/home/.ssh/config
@@ -27,7 +27,7 @@ Host git-itar
   IdentityFile ~/.ssh/sarnoff.pem
 
 Host kestrel
-  HostName kestrel
+  HostName kestrel.sarnoff.internal
   port 22
   User nvitovitch
   IdentityFile ~/.ssh/kestrel.key
