--- a/ssh/config
+++ b/ssh/config
@@ -1,30 +1,36 @@
-Host apiary-web
-	HostName www.theapiary.co
+##################################################
+#                  Sarnoff                       #
+##################################################
+
+Host deeplearn
+  HostName Precision-T7610.sarnoff.internal
   Port 22
   User nvitovitch
-  IdentityFile ~/.ssh/keys/apiary-web.pem
+  ForwardAgent yes
 
-Host apiary-git
-	HostName www.theapiary.co
-	Port 22
-	User git
-	IdentityFile ~/.ssh/keys/apiary-web.pem
+Host deeplearn-ghost
+  HostName Precision-T7610.sarnoff.internal
+  Port 22
+  User ghost
+  ForwardAgent yes
 
-Host github
-	User git
-	IdentityFile ~/.ssh/github-mint.key
+Host kestrel
+  HostName kestrel.sarnoff.internal
+  Port 22
+  User nvitovitch
+  ForwardAgent yes
 
 Host git-open
-  HostName git-open.sarnoff.com
-  port 22
+  HostName git-open.sarnoff.internal
+  Port 22
   User nvitovitch
-  IdentityFile ~/.ssh/sarnoff.pem
+  ForwardAgent yes
 
 Host git-itar
-  HostName git-itar.sarnoff.com
-  port 22
+  HostName git-itar.sarnoff.internal
+  Port 22
   User nvitovitch
-  IdentityFile ~/.ssh/sarnoff.pem
+  ForwardAgent yes
 
 Host kestrel
   HostName kestrel.sarnoff.internal
@@ -32,3 +38,18 @@ Host kestrel
   User nvitovitch
   IdentityFile ~/.ssh/kestrel.key
 
+##################################################
+#                   The Apiary                   #
+##################################################
+
+Host apiary-web
+  HostName www.theapiary.co
+  Port 22
+  User nvitovitch
+  IdentityFile ~/.ssh/keys/apiary-web.pem
+
+Host apiary-git
+  HostName www.theapiary.co
+  Port 22
+  User git
+  IdentityFile ~/.ssh/keys/apiary-web.pem
