Add global .gitignore

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -7,3 +7,7 @@
         lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
 [pull]
 
+[color]
+	ui = auto
+[core]
+	excludesfile = /home/nvitovitch/.gitignore_global
